--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 
+PORT = 3000;
 
-mongoConnectionString = ''
+mongoConnectionString = 'mongodb+srv://KareemSarhan:h#e$&?3s!.DSXSe@cluster0.vnk9p.mongodb.net/ADVANCED-LAB-DB?retryWrites=true&w=majority';
