--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 
-mongoConnectionString = mongodb+srv://KareemSarhan:h#e$&?3s!.DSXSe@cluster0.vnk9p.mongodb.net/ADVANCED-LAB-DB?retryWrites=true&w=majority
+mongoConnectionString = mongodb+srv://team45:45@projectdb.j2a9k.mongodb.net/ProjectDB?retryWrites=true&w=majority
