--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-    "dependencies":
-    {
+    "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -17,27 +16,22 @@
     "description": "Advanced-Lab-Project",
     "version": "0.0.0",
     "main": "index.js",
-    "nodemonConfig":
-    {
+    "nodemonConfig": {
         "verbose": true,
         "ignore": [
             "*.json"
         ]
     },
-
-    "scripts":
-    {
+    "scripts": {
         "start": "nodemon index.js"
     },
-    "repository":
-    {
+    "repository": {
         "type": "git",
         "url": "git+https://github.com/KareemSarhan/Advanced-Lab-Project.git"
     },
     "author": "KareemSarhan",
     "license": "MIT",
-    "bugs":
-    {
+    "bugs": {
         "url": "https://github.com/KareemSarhan/Advanced-Lab-Project/issues"
     },
     "homepage": "https://github.com/KareemSarhan/Advanced-Lab-Project#readme"
