--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "dependencies": {
+        "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "bootstrap": "^4.5.3",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
@@ -10,6 +12,7 @@
         "mongodb": "^3.6.3",
         "mongoose": "^5.10.15",
         "nodemon": "^2.0.6",
+        "react-bootstrap": "^1.4.0",
         "validator": "^13.5.2"
     },
     "name": "advanced-lab-project",
