--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
         "nodemon": "^2.0.6",
         "validator": "^13.5.2"
     },
-    "name": "advanced-lab-project",
+    "name": "server",
     "description": "Advanced-Lab-Project",
     "version": "0.0.0",
     "main": "index.js",
@@ -24,15 +24,5 @@
     },
     "scripts": {
         "start": "nodemon index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/KareemSarhan/Advanced-Lab-Project.git"
-    },
-    "author": "KareemSarhan",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/KareemSarhan/Advanced-Lab-Project/issues"
-    },
-    "homepage": "https://github.com/KareemSarhan/Advanced-Lab-Project#readme"
+    }
 }
