--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "bootstrap": "^4.5.3",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
@@ -10,6 +11,9 @@
         "mongodb": "^3.6.3",
         "mongoose": "^5.10.15",
         "nodemon": "^2.0.6",
+        "react": "^17.0.1",
+        "react-bootstrap": "^1.4.0",
+        "react-dom": "^17.0.1",
         "validator": "^13.5.2"
     },
     "name": "advanced-lab-project",
@@ -23,7 +27,10 @@
         ]
     },
     "scripts": {
-        "start": "nodemon index.js"
+        "gucportal-install": "npm install --prefix gucportal",
+        "start": "nodemon index.js",
+        "gucportal": "npm start --prefix gucportal",
+        "dev": "concurrently \"npm run start\" \"npm run gucportal\""
     },
     "repository": {
         "type": "git",
