--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "bootstrap": "^4.5.3",
+        "concurrently": "^5.3.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
@@ -10,6 +12,7 @@
         "mongodb": "^3.6.3",
         "mongoose": "^5.10.15",
         "nodemon": "^2.0.6",
+        "react-bootstrap": "^1.4.0",
         "validator": "^13.5.2"
     },
     "name": "advanced-lab-project",
@@ -22,8 +25,11 @@
             "*.json"
         ]
     },
-    "scripts": {
-        "start": "nodemon index.js"
+    "scripts": { 
+        "start": "node server.js",
+        "server":"nodemon server.js",
+        "gucportal" :"npm start --prefix gucportal",
+        "dev" : "concurrently \"npm run server\" \"npm run gucportal\""
     },
     "repository": {
         "type": "git",
