--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "name": "advanced-lab-project",
     "description": "Advanced-Lab-Project",
     "version": "0.0.0",
-    "main": "index.js",
+    "main": "index1.js",
     "nodemonConfig": {
         "verbose": true,
         "ignore": [
@@ -28,7 +28,7 @@
     },
     "scripts": {
         "gucportal-install": "npm install --prefix gucportal",
-        "start": "nodemon index.js",
+        "start": "nodemon index1.js",
         "gucportal": "npm start --prefix gucportal",
         "dev": "concurrently \"npm run start\" \"npm run gucportal\""
     },
