--- a/gucportal/package.json
+++ b/gucportal/package.json
@@ -9,9 +9,8 @@
     "advanced-lab-project": "file:..",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
-    "concurrently": "^5.3.0",
     "react": "^17.0.1",
-    "react-crud-table": "^0.2.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -33,7 +32,6 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
