--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "mongodb": "^3.6.3",
         "mongoose": "^5.10.15",
         "nodemon": "^2.0.6",
+        "react": "^17.0.1",
         "react-bootstrap": "^1.4.0",
+        "react-dom": "^17.0.1",
         "validator": "^13.5.2"
     },
     "name": "advanced-lab-project",
