--- a/gucportal/package.json
+++ b/gucportal/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "advanced-lab-project": "file:..",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "material-ui": "^0.20.2",
+    "material-ui-colors": "^1.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
