--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
+        "material-ui": "^0.20.2",
+        "material-ui-colors": "^1.0.0",
+        "mdbreact": "^5.0.1",
         "mongodb": "^3.6.3",
         "mongoose": "^5.10.15",
         "nodemon": "^2.0.6",
         "react": "^17.0.1",
         "react-bootstrap": "^1.4.0",
         "react-dom": "^17.0.1",
+        "sweetalert": "^2.1.2",
         "validator": "^13.5.2"
     },
     "name": "advanced-lab-project",
