--- a/gucportal/package.json
+++ b/gucportal/package.json
@@ -1,40 +1,45 @@
 {
-	"name": "gucportal",
-	"version": "1.0.0",
-	"private": true,
-	"dependencies": {
-		"@trendmicro/react-sidenav": "^0.5.0",
-		"axios": "^0.21.1",
-		"bootstrap": "^4.5.3",
-		"core-js": "^3.8.2",
-		"material-ui": "^0.20.2",
-		"material-ui-colors": "^1.0.0",
-		"react": "^17.0.1",
-		"react-bootstrap": "^1.4.0",
-		"react-dom": "^17.0.1",
-		"react-redux": "^7.2.2",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.1",
-		"react-transition-group": "^4.4.1",
-		"redux": "^4.0.5",
-		"redux-thunk": "^2.3.0",
-		"sweetalert": "^2.1.2"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"gucportal-install": "npm install --legacy-peer-deps",
-		"gucportal-update": "npm update --legacy-peer-deps"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+    "name": "gucportal",
+    "version": "1.0.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^4.11.2",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.57",
+        "@trendmicro/react-sidenav": "^0.5.0",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.5.3",
+        "core-js": "^3.8.2",
+        "material-ui": "^0.20.2",
+        "material-ui-colors": "^1.0.0",
+        "react": "^17.0.1",
+        "react-bootstrap": "^1.4.0",
+        "react-circular-progressbar": "^2.0.3",
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.1",
+        "react-transition-group": "^4.4.1",
+        "react-visibility-sensor": "^5.1.1",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
+        "sweetalert": "^2.1.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "gucportal-install": "npm install --legacy-peer-deps",
+        "gucportal-update": "npm update --legacy-peer-deps"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
