--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@material-ui/core": "^4.11.2",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"bootstrap": "^4.5.3",
@@ -16,6 +17,7 @@
 		"react": "^17.0.1",
 		"react-bootstrap": "^1.4.0",
 		"react-dom": "^17.0.1",
+		"sweetalert": "^2.1.2",
 		"validator": "^13.5.2"
 	},
 	"name": "advanced-lab-project",
